--- a/conf/zoo3.cfg
+++ b/conf/zoo3.cfg
@@ -9,9 +9,9 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
-dataDir=/tmp/zookeeper
+dataDir=/Users/william.wang/Documents/pro/zookeeper/zookeeper/tmp/zookeeper3
 # the port at which the clients will connect
-clientPort=2181
+clientPort=2183
 # the maximum number of client connections.
 # increase this if you need to handle more clients
 #maxClientCnxns=60
